Estos son los cambios directos del primer commit -a al master

--- a/blogspot.html
+++ b/blogspot.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Acá vamos a escribir tonterias</h1>
-        <p>Esta es nuestra primer tonteria</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es un titulo atractivo e interesante de nuestras tonterias</h1>
+                <p>Y este es el párrafo que vamos a utilizar para explicar 
+                    las cosas chidas que se pueden hacer con las ramas</p>
+            </div>
+            
+        </div>
     </body>
 </html>
