--- a/blogspot.html
+++ b/blogspot.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante de nuestras tonterias</h1>
                 <p>Y este es el párrafo que vamos a utilizar para explicar 
