Se agregaro un nuevo parrafo

--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,12 @@
                 <h1>Este es un titulo atractivo e interesante de nuestras tonterias</h1>
                 <p>Y este es el párrafo que vamos a utilizar para explicar 
                     las cosas chidas que se pueden hacer con las ramas</p>
+                <p>Los blogs son cosas de los milenials
+                    que ya no se usan mucho, lo de hoy son las
+                    redes sociales y tiktokear, pero sirven para
+                    desahogar tus ideas.
+                </p>
+                    
             </div>
             
         </div>
