cambiamoms la cebecera el color azul y el dale like

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante de nuestras tonterias</h1>
@@ -18,6 +18,7 @@
                     redes sociales y tiktokear, pero sirven para
                     desahogar tus ideas.
                 </p>
+                <p>Suscribete y dale like...</p>
                     
             </div>
             
